[package]
name = "opool"
version = "0.2.0"
edition = "2021"
authors = ["Khashayar Fereidani"]
description = "High-performance, lock-free local and concurrent object pool with automated allocation, cleanup, and verification."
repository = "https://github.com/fereidani/opool"
documentation = "https://docs.rs/opool"
keywords = ["pool", "object-pool", "lock-free", "no_std"]
categories = ["memory-management", "concurrency", "no-std"]
license = "MIT"
readme = "README.md"

[dependencies]
crossbeam-queue = "0.3"

[dev-dependencies]
criterion = "0.4"
rayon = "1"

[[bench]]
name = "bench"
harness = false
